--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -34,7 +34,7 @@ linkedin_username: ghaffarisaravi # your LinkedIn user name
 # quora_username: # your Quora username
 # research_gate_profile: # your profile on ResearchGate
 rss_icon: false # comment this line to hide the RSS icon
-scholar_userid:  # your Google Scholar ID
+# scholar_userid:  # your Google Scholar ID
 # scopus_id: # your profile on Scopus
 # semanticscholar_id: # your Semantic Scholar ID
 # spotify_id: # your spotify id
